Course start and end Notification

--- a/app/src/main/res/layout/activity_course_detail.xml
+++ b/app/src/main/res/layout/activity_course_detail.xml
@@ -50,6 +50,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".6"
+                android:editable="false"
                 android:text="" />
         </LinearLayout>
 
@@ -70,6 +71,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".6"
+                android:editable="false"
                 android:text="" />
         </LinearLayout>
 
@@ -82,7 +84,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".4"
-                android:text="Status" />
+                android:text="Status:" />
 
             <EditText
                 android:id="@+id/statusEdit"
