--- a/app/src/main/res/layout/activity_add_term.xml
+++ b/app/src/main/res/layout/activity_add_term.xml
@@ -9,8 +9,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginHorizontal="15dp"
-        android:orientation="vertical">
+        android:layout_marginHorizontal="20dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="15dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,7 +26,7 @@
                 android:text="Title:" />
 
             <EditText
-                android:id="@+id/titleEdit"
+                android:id="@+id/AddTerm_titleEdit"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".6"
@@ -45,11 +46,11 @@
                 android:text="Start Date:" />
 
             <EditText
-                android:id="@+id/startEdit"
+                android:id="@+id/AddTerm_startEdit"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".6"
-                android:text="" />
+                android:editable="false" />
         </LinearLayout>
 
         <LinearLayout
@@ -65,10 +66,11 @@
                 android:text="End Date:" />
 
             <EditText
-                android:id="@+id/endEdit"
+                android:id="@+id/AddTerm_endEdit"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".6"
+                android:editable="false"
                 android:text="" />
         </LinearLayout>
 
@@ -77,6 +79,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="100dp"
+            android:layout_marginVertical="25dp"
             android:onClick="onSave"
             android:text="Save" />
 
