--- a/app/src/main/res/layout/activity_term_list.xml
+++ b/app/src/main/res/layout/activity_term_list.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="20dp"
     tools:context="UI.TermList">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvTerms"
         android:layout_width="409dp"
         android:layout_height="601dp"
+        android:layout_marginBottom="69dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -20,9 +22,9 @@
         android:layout_margin="5dp"
         android:clickable="true"
         android:onClick="onAddTerm"
-        app:srcCompat="@drawable/ic_baseline_add_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:srcCompat="@drawable/ic_baseline_add_24"
         tools:layout_editor_absoluteX="339dp"
         tools:layout_editor_absoluteY="659dp" />
 
