--- a/app/src/main/res/layout/activity_term_detail.xml
+++ b/app/src/main/res/layout/activity_term_detail.xml
@@ -85,7 +85,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvAssociatedCourses"
             android:layout_width="match_parent"
-            android:layout_height="543dp" />
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
