--- a/app/src/main/res/menu/menu_termdetail.xml
+++ b/app/src/main/res/menu/menu_termdetail.xml
@@ -2,9 +2,13 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Add Course"
+    <item
+        android:id="@+id/addCourse"
         android:orderInCategory="100"
-        android:id="@+id/addCourse"/>
+        android:title="Add Course" />
+    <item android:title="Remove Course"
+        android:id="@+id/removeCourse"
+        android:orderInCategory="100" />
     <item android:title="Delete Term"
         android:orderInCategory="100"
         android:id="@+id/deleteTerm"/>
