--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     tools:context="UI.MainActivity">
 
+    <Button
+        android:id="@+id/assessmentsButton"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:onClick="onAssessments"
+        android:text="Assessments"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/coursesButton"
+        app:layout_constraintVertical_bias="0.248" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
