--- a/app/src/main/res/layout/activity_term_detail.xml
+++ b/app/src/main/res/layout/activity_term_detail.xml
@@ -86,6 +86,15 @@
                 android:onClick="onSave"
                 android:text="Save" />
 
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:text="Associated Course:"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvAssociatedCourses"
                 android:layout_width="match_parent"
