Fixed alarm being trigger on past days

--- a/app/src/main/res/layout/activity_add_assessment.xml
+++ b/app/src/main/res/layout/activity_add_assessment.xml
@@ -79,6 +79,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".6"
+                android:editable="false"
                 android:text="" />
         </LinearLayout>
 
@@ -99,6 +100,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".6"
+                android:editable="false"
                 android:text="" />
         </LinearLayout>
 
