Separated start and end notify. Used alarmManager.setExact

--- a/app/src/main/res/menu/menu_assessmentdetail.xml
+++ b/app/src/main/res/menu/menu_assessmentdetail.xml
@@ -2,9 +2,12 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Set Notification"
+    <item android:title="Set Start Notification"
         android:orderInCategory="100"
-        android:id="@+id/notify"/>
+        android:id="@+id/assessmentStartNotify"/>
+    <item android:title="Set End Notification"
+        android:orderInCategory="100"
+        android:id="@+id/assessmentEndNotify"/>
     <item android:title="Delete Assessment"
         android:orderInCategory="100"
         android:id="@+id/deleteAssessment"/>
